# runner

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO.txt  index.cpp  setup.sh
core/: index.cpp  index.h
src/cli/: helper.cpp  index.cpp  index.h
src/constants/: index.cpp  index.h
src/core/: index.cpp  index.h
src/filewatcher/: index.cpp  index.h
src/helpers/: index.h
src/table/: index.cpp  index.h
test/: index.cpp  index.h
